# Invoice_Parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/agents/: invoice_agent.py
backend/core/: config.py  deps.py  logging.py
backend/experiment/: dataset.py  img_process.py  invoice.py  main.py  nanonets.py  paddlevl.py  process_img.py  working_paddle.md
backend/middlewares/: cors.py  logging.py
backend/routes/: invoice.py
backend/schemas/: common.py
backend/utils/: image_utils.py  table_utils.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx
