[project]
name = "invoice"
version = "0.1.0"
description = "Invoice OCR + Vision LLM"
readme = "README.md"
requires-python = "==3.10.12"

dependencies = [
    "fastapi>=0.128.0",
    "numpy<2.0",
    "pdf2image>=1.17.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "timm>=0.9.16",
    "pandas>=1.5.0,<3.0",
    "pymupdf>=1.26.7",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "transformers",
    "beautifulsoup4>=4.14.3",
    "opencv-python>=4.11.0.86",
    "imutils>=0.5.4",
    "lxml>=6.0.2",
    "html5lib>=1.1",
    "fuzzywuzzy",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }

[dependency-groups]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "types-python-dateutil>=2.9.0.20251115",
]


[tool.ruff.lint]
per-file-ignores = { "backend/main.py" = ["E402"] }

[tool.mypy]
explicit_package_bases = true
mypy_path = ["."]
[[tool.mypy.overrides]]
module = [
    "paddleocr.*",
]
ignore_missing_imports = true
